--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -4,7 +4,7 @@
 
     <item
         android:title="@string/search"
-        android:id="@+id/search_subjects"
+        android:id="@+id/search"
         android:icon="@drawable/ic_search"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"
