--- a/app/src/main/res/layout/courses_item_layout.xml
+++ b/app/src/main/res/layout/courses_item_layout.xml
@@ -2,6 +2,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/weather_parent_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -69,6 +70,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="@string/professors"
+                android:textColor="@android:color/darker_gray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -88,16 +90,18 @@
                 tools:context=".SubjectsActivity" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/button_sign_up"
+                style="@android:style/Widget.Material.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Inscribite"
+                android:text="@string/button_sign_up"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/time_slots_recycler_view" />
+                app:layout_constraintTop_toBottomOf="@+id/time_slots_recycler_view"
+                tools:targetApi="m" />
 
             <TextView
                 android:id="@+id/classroom_campus"
@@ -109,7 +113,7 @@
                 android:layout_marginTop="8dp"
                 android:text="@string/classroom_campus"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/button_sign_up"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/time_slots_recycler_view"
