--- a/app/src/main/res/layout/content_courses.xml
+++ b/app/src/main/res/layout/content_courses.xml
@@ -24,23 +24,23 @@
         android:id="@+id/already_one_of_your_subjects"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginBottom="16dp"
         android:text="@string/already_one_of_your_subjects"
+        android:textColor="#711d1d"
         android:textSize="13sp"
         android:visibility="invisible"
-        android:textColor="#711d1d"
-        app:layout_constraintTop_toBottomOf="@+id/screen_title"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/screen_title"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/screen_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/course_content_title"
@@ -48,6 +48,7 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
