--- a/app/src/main/res/layout/content_my_courses.xml
+++ b/app/src/main/res/layout/content_my_courses.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:text="@string/course_content_title"
+        android:text=""
         android:textSize="13sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
