--- a/app/src/main/res/layout/courses_item_layout.xml
+++ b/app/src/main/res/layout/courses_item_layout.xml
@@ -88,7 +88,7 @@
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/description_header"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
-                app:layout_constraintHorizontal_weight="2"
+                app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -103,7 +103,7 @@
                 android:text="@string/description_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/day_of_week_header"
-                app:layout_constraintHorizontal_weight="3.5"
+                app:layout_constraintHorizontal_weight="35"
                 app:layout_constraintStart_toEndOf="@+id/classroom_code_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -117,7 +117,7 @@
                 android:text="@string/day_of_week_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/beginning_header"
-                app:layout_constraintHorizontal_weight="0.6"
+                app:layout_constraintHorizontal_weight="20"
                 app:layout_constraintStart_toEndOf="@+id/description_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -131,7 +131,7 @@
                 android:text="@string/beginning_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/ending_header"
-                app:layout_constraintHorizontal_weight="1.2"
+                app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toEndOf="@+id/day_of_week_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -145,14 +145,14 @@
                 android:text="@string/ending_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="1.2"
+                app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toEndOf="@+id/beginning_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
             <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/time_slots_recycler_view"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
