#? Fixed time slot view on my courses

--- a/app/src/main/res/layout/my_courses_item_layout.xml
+++ b/app/src/main/res/layout/my_courses_item_layout.xml
@@ -80,14 +80,14 @@
                 android:id="@+id/classroom_code_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/classroom_code_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/description_header"
                 app:layout_constraintHorizontal_chainStyle="spread_inside"
-                app:layout_constraintHorizontal_weight="2"
+                app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -95,14 +95,14 @@
                 android:id="@+id/description_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:maxLines="2"
                 android:text="@string/description_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/day_of_week_header"
-                app:layout_constraintHorizontal_weight="3.5"
+                app:layout_constraintHorizontal_weight="35"
                 app:layout_constraintStart_toEndOf="@+id/classroom_code_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -110,13 +110,13 @@
                 android:id="@+id/day_of_week_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/day_of_week_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/beginning_header"
-                app:layout_constraintHorizontal_weight="0.6"
+                app:layout_constraintHorizontal_weight="20"
                 app:layout_constraintStart_toEndOf="@+id/description_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -124,13 +124,13 @@
                 android:id="@+id/beginning_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/beginning_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toStartOf="@+id/ending_header"
-                app:layout_constraintHorizontal_weight="1.2"
+                app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toEndOf="@+id/day_of_week_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
@@ -138,20 +138,20 @@
                 android:id="@+id/ending_header"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/ending_header"
                 android:textSize="13sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="1.2"
+                app:layout_constraintHorizontal_weight="15"
                 app:layout_constraintStart_toEndOf="@+id/beginning_header"
                 app:layout_constraintTop_toBottomOf="@+id/professors" />
 
             <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/time_slots_recycler_view"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
