#48 Added exam button to navegation drawer

--- a/app/src/main/res/menu/activity_drawer.xml
+++ b/app/src/main/res/menu/activity_drawer.xml
@@ -12,6 +12,10 @@
             android:id="@+id/nav_courses"
             android:icon="@drawable/ic_menu_courses"
             android:title="Mis Inscripciones" />
+        <item
+            android:id="@+id/nav_exam_subjects"
+            android:icon="@drawable/ic_menu_exam_subjects"
+            android:title="Oferta Exámenes" />
 
     </group>
 
