--- a/app/src/main/res/layout/content_exams.xml
+++ b/app/src/main/res/layout/content_exams.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ExamSubjectsActivity"
-    tools:showIn="@layout/app_bar_exam_subjects">
+    tools:context=".SubjectsActivity"
+    tools:showIn="@layout/app_bar_subjects">
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/subjects_recycler_view"
+        android:id="@+id/exams_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ExamSubjectsActivity" />
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:context=".ExamsActivity" />
 
 </android.support.constraint.ConstraintLayout>
